tests/file_test/testdata/unicode_escape_without_anything.expected
tests/file_test/testdata/unicode_escape_without_anything.llang: error: unicode should be in the format of \u{...}
    1|let s = "abc\u";
     |              ^

